fix bug where numbers wrapped to 2nd line in the display. Fix but where decimals were not acting appropriately for some operations

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
     text-align: end;
     margin: 0px;
     color: white;
-    word-wrap: break-word;
+    word-break: normal;
     overflow: hidden;
 }
 
